updated all scripts/files to have a first installable version of the CCU-Historian Addon.

--- a/addon/ccu-historian_addon.cfg
+++ b/addon/ccu-historian_addon.cfg
@@ -1,9 +1,9 @@
 {
-  CONFIG_URL :8081/
+  CONFIG_URL /addons/ccu-historian/config.cgi
   CONFIG_DESCRIPTION {
-    de {<li>Schnittstellenprozesse mit MQTT Broker verbinden</li>}
-    en {<li>Connect Interface Processes to an MQTT Broker</li>}
+    de {<li>Langzeitarchiv für Datenwerte der CCU</li>}
+    en {<li>Long-term archive for data values of the CCU</li>}
   }
   ID ccu-historian
-  CONFIG_NAME "CCU Historian"
+  CONFIG_NAME "CCU-Historian"
 }
