--- a/addon/ccu-historian.config
+++ b/addon/ccu-historian.config
@@ -4,9 +4,9 @@ logSystem.fileLimit=1000000
 logSystem.fileCount=5
 logSystem.binRpcLevel=Level.INFO
 database.dir='/usr/local/sdcard/ccu-historian'     
-webServer.port=8081
+webServer.port=8083
 webServer.dir='/usr/local/addons/ccu-historian/webapp'
 webServer.logLevel=Level.INFO
 devices.device1.type=CCU2
 devices.device1.address='127.0.0.1'
-devices.device1.plugin1.type=CUXD
+//devices.device1.plugin1.type=CUXD
