reworked the rc.d init script to automatically gather the DNS resolvable hostname and data path depending on the CCU device type. This fixes #1.

--- a/addon/ccu-historian.config
+++ b/addon/ccu-historian.config
@@ -3,8 +3,9 @@ logSystem.fileName='/var/log/ccu-historian-%g.log'
 logSystem.fileLimit=1000000
 logSystem.fileCount=5
 logSystem.binRpcLevel=Level.INFO
-database.dir='/usr/local/sdcard/ccu-historian'     
-webServer.port=8083
+database.webEnable=false
+database.webPort=8083
+webServer.port=8082
 webServer.dir='/usr/local/addons/ccu-historian/ccu-historian/webapp'
 webServer.logLevel=Level.INFO
 devices.device1.type=CCU2
