--- a/addon/ccu-historian.config
+++ b/addon/ccu-historian.config
@@ -3,10 +3,16 @@ logSystem.fileName='/var/log/ccu-historian-%g.log'
 logSystem.fileLimit=1000000
 logSystem.fileCount=5
 logSystem.binRpcLevel=Level.INFO
-database.webEnable=false
+database.webEnable=true
 database.webPort=8083
+database.webAllowOthers=true
 webServer.port=8082
+webServer.historianAddress='X.X.X.X'
 webServer.dir='/usr/local/addons/ccu-historian/ccu-historian/webapp'
 webServer.logLevel=Level.INFO
+webServer.menuLinks.link1.text='CCU Settings'
+webServer.menuLinks.link1.address='http://X.X.X.X/'
 devices.device1.type=CCU2
 devices.device1.address='127.0.0.1'
+devices.historianAddress=null
+database.dir='/usr/local/sdcard/ccu-historian/'
