minor changes to facilitate the upcoming 1.0.0 addon release.

--- a/addon/ccu-historian.config
+++ b/addon/ccu-historian.config
@@ -10,7 +10,7 @@ webServer.port=8082
 webServer.historianAddress='X.X.X.X'
 webServer.dir='/usr/local/addons/ccu-historian/ccu-historian/webapp'
 webServer.logLevel=Level.INFO
-webServer.menuLinks.link1.text='CCU Settings'
+webServer.menuLinks.link1.text='WebUI Settings'
 webServer.menuLinks.link1.address='http://X.X.X.X/'
 devices.device1.type=CCU2
 devices.device1.address='127.0.0.1'
