--- a/dist-generic/build.xml
+++ b/dist-generic/build.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="dist-generic" default="build">
-	<!-- TODO: implement clean task -->
 	<target name="build">
-		<property file="../ccu-historian/build.properties"/>
-		<property name="destfile" value="build/ccu-historian-${version}-bin.zip"/>
+		<property file="../ccu-historian/build.properties" />
+		<property name="destfile" value="build/ccu-historian-${version}-bin.zip" />
 		<zip destfile="${destfile}">
-			<fileset dir="src"/>
-			<fileset dir="../ccu-historian/build"/>
-			<file file="../LICENSE.txt"/>
-			<file file="../doc/CCU-Historian_Kurzanleitung.pdf"/>
+			<fileset dir="src" />
+			<fileset dir="../ccu-historian/build" />
+			<file file="../LICENSE.txt" />
+			<file file="../doc/CCU-Historian_Kurzanleitung.pdf" />
 		</zip>
+	</target>
+
+	<target name="clean">
+		<delete>
+			<fileset dir="build" includes="ccu-historian-*-bin.zip" />
+		</delete>
 	</target>
 </project>
