allow /query/trend and csv without gy extension

--- a/ccu-historian/src-webapp/WEB-INF/web.xml
+++ b/ccu-historian/src-webapp/WEB-INF/web.xml
@@ -32,11 +32,25 @@
 	<servlet>
 		<servlet-name>Groovy</servlet-name>
 		<servlet-class>mdz.ccuhistorian.webapp.GroovyServlet</servlet-class>
+		<init-param>
+			<param-name>resource.name.regex</param-name>
+			<param-value>/query/csv|/query/trend</param-value>
+		</init-param>
+		<init-param>
+			<param-name>resource.name.replacement</param-name>
+			<param-value>$0\.gy</param-value>
+		</init-param>
+		<init-param>
+			<param-name>resource.name.replace.all</param-name>
+			<param-value>false</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Groovy</servlet-name>
 		<url-pattern>*.groovy</url-pattern>
 		<url-pattern>*.gy</url-pattern>
+		<url-pattern>/query/trend</url-pattern>
+		<url-pattern>/query/csv</url-pattern>
 	</servlet-mapping>
 	<filter>
         <filter-name>cross-origin</filter-name>
