begin of dpdetails and dptools page

--- a/ccu-historian/.settings/org.eclipse.core.resources.prefs
+++ b/ccu-historian/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,6 @@
 eclipse.preferences.version=1
 encoding//src-webapp/custom/example1.html=UTF-8
 encoding//src-webapp/historian/config.html=UTF-8
-encoding//src-webapp/historian/dpdetails.html=UTF-8
-encoding//src-webapp/historian/tools.html=UTF-8
+encoding//src-webapp/historian/dpdetails.gy=UTF-8
+encoding//src-webapp/historian/dptools.gy=UTF-8
 encoding/<project>=UTF-8
