--- a/ccu-historian/.classpath
+++ b/ccu-historian/.classpath
@@ -4,7 +4,11 @@
 	<classpathentry kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/hc-utils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/mdz-utils"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/external-libs/jetty-all-7.2.2/jetty-all-7.2.2.v20101205.jar"/>
 	<classpathentry kind="lib" path="/external-libs/javax.servlet.jsp-2.1.0/javax.servlet.jsp_2.1.0.v201004190952.jar"/>
 	<classpathentry kind="lib" path="/external-libs/javax.el-api-1.1.2/javax.el-api-1.1.2.jar"/>
@@ -12,7 +16,7 @@
 	<classpathentry kind="lib" path="/external-libs/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="lib" path="/external-libs/jcommon-1.0.23/jcommon-1.0.23.jar"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
-	<classpathentry kind="lib" path="/external-libs/h2-1.4.196/h2-1.4.196.jar"/>
 	<classpathentry kind="lib" path="/external-libs/servlet-api-2.4/servlet-api-2.4.jar"/>
+	<classpathentry kind="lib" path="/external-libs/h2-1.4.197/h2-1.4.197.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
