ccu-dist: switched buffer on (2h)

--- a/dist-ccu/src/addon/ccu-historian-sample.config
+++ b/dist-ccu/src/addon/ccu-historian-sample.config
@@ -14,3 +14,5 @@ devices.device1.type=CCU2
 devices.device1.address='X.X.X.X'
 devices.historianAddress='X.X.X.X'
 database.dir='/usr/local/sdcard/ccu-historian/'
+historian.metaCycle=2*60*60*1000
+historian.bufferTime=2*60*60*1000
