removed out-dated example

--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -78,4 +78,4 @@ devices.device1.address='<IP-Adresse>'
 // Zum Freischalten der Web-Links zu den Beispiel-Web-Seiten, die Kommentarzeichen (//) vor folgenden
 // zwei Zeilen entfernen:
 // webServer.menuLinks.link1.text='Beispiel 1 - Vorjahresvergleich'
-// webServer.menuLinks.link1.address='/custom/example1.html'
+// webServer.menuLinks.link1.address='/custom/example1.gy'
