--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -53,7 +53,7 @@
 // devices.device<Nr.>.writeAccess=false
 // devices.device<Nr.>.watchdogProgram=''
 // devices.device<Nr.>.watchdogCycle=300000 // 5 Minuten
-// Bei Anbindung von mehreren Zentralen muss ein Präfix je Zantrale gesetzt werden!
+// Bei Anbindung von mehreren Zentralen muss ein Präfix je Zentrale gesetzt werden!
 // devices.device<Nr.>.prefix=''
 //
 // Es muss im Folgenden mindestens eine Zentrale bzw. Gerät konfiguriert werden:
