--- a/dist-ccu/build.xml
+++ b/dist-ccu/build.xml
@@ -33,8 +33,8 @@
 			<tarfileset dir="../ccu-historian/build" prefix="ccu-historian" username="root" group="root">
 				<exclude name="VERSION.txt" />
 			</tarfileset>
-			<tarfileset dir="../dist-generic/src" prefix="ccu-historian" username="root" group="root">
-				<include name="ccu-historian-sample.config" />
+			<tarfileset dir="../dist-generic/src" prefix="ccu-historian" filemode="755" username="root" group="root">
+				<include name="tool" />
 			</tarfileset>
 			<tarfileset dir=".." prefix="ccu-historian" username="root" group="root">
 				<include name="LICENSE.txt" />
