included highcharts extension

--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -77,5 +77,7 @@ devices.device1.address='<IP-Adresse>'
 
 // Zum Freischalten der Web-Links zu den Beispiel-Web-Seiten, die Kommentarzeichen (//) vor folgenden
 // zwei Zeilen entfernen:
-// webServer.menuLinks.link1.text='Beispiel 1 - Vorjahresvergleich'
-// webServer.menuLinks.link1.address='/custom/example1.gy'
+webServer.menuLinks.link1.text='H2-HighChart'
+webServer.menuLinks.link1.address='/custom/h2-highchart/H2-HighChart.gy'
+// webServer.menuLinks.link2.text='Beispiel 1 - Vorjahresvergleich'
+// webServer.menuLinks.link2.address='/custom/example1.gy'
