jsonrpc api: added test for updateDataPoint

--- a/ccu-historian-test/config/sim.config
+++ b/ccu-historian-test/config/sim.config
@@ -6,10 +6,11 @@ logSystem.fileLevel=Level.FINEST
 logSystem.directMessages=true
 logSystem.fileName='./out.log'
 
-webServer.dir='../../ccu-historian/run/webapp'
+webServer.dir='../../ccu-historian/src-webapp'
 
-devices.device1.type=SIMULATION
-devices.device1.writeAccess=true
+// uncomment for some tests
+//devices.device1.type=SIMULATION
+//devices.device1.writeAccess=true
 
 database.password=''
 database.name='sim'
