--- a/hc-utils/.classpath
+++ b/hc-utils/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/mdz-utils"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/external-libs/groovy-xmlrpc-0.8/groovy-xmlrpc-0.8.jar"/>
+	<classpathentry kind="lib" path="/external-libs/groovy-2.5.6/groovy-dateutil-2.5.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
