updated monit cfg, fixes #192

--- a/dist-ccu/src/addon/etc/monitCCUHistorian.cfg
+++ b/dist-ccu/src/addon/etc/monitCCUHistorian.cfg
@@ -1,11 +1,13 @@
 # ccu-historian daemon monitoring
 check process ccu-historian with pidfile /var/run/ccu-historian.pid
     group addon
+    mode passive
+    onreboot nostart
     start = "/etc/config/rc.d/ccu-historian start"
     stop = "/etc/config/rc.d/ccu-historian stop"
     restart = "/etc/config/rc.d/ccu-historian restart"
-    if not exist for 1 cycles then restart
-    if failed port 8082 for 5 cycles then restart
-    if failed port 8083 for 5 cycles then restart
-    if 1 restart within 1 cycles then
-      exec "/bin/triggerAlarm.tcl 'CCU-Historian Neustart' WatchDog-Alarm"
+    if does not exist then
+      exec "/bin/triggerAlarm.tcl 'CCU-Historian nicht aktiv' WatchDog-Alarm"
+    if failed port 8082 for 5 cycles then
+      exec "/bin/triggerAlarm.tcl 'CCU-Historian Web-Seiten nicht erreichbar' WatchDog-Alarm"
+    depends on lighttpd, HMIPServer, ReGaHss
