added monit rfd dependency

--- a/dist-ccu/src/addon/etc/monitCCUHistorian.cfg
+++ b/dist-ccu/src/addon/etc/monitCCUHistorian.cfg
@@ -10,4 +10,4 @@ check process ccu-historian with pidfile /var/run/ccu-historian.pid
       exec "/bin/triggerAlarm.tcl 'CCU-Historian nicht aktiv' WatchDog-Alarm"
     if failed port 8082 for 5 cycles then
       exec "/bin/triggerAlarm.tcl 'CCU-Historian Web-Seiten nicht erreichbar' WatchDog-Alarm"
-    depends on lighttpd, HMIPServer, ReGaHss
+    depends on lighttpd, rfd, HMIPServer, ReGaHss
