adding a script engine

--- a/dist-ccu/src/addon/ccu-historian-sample.config
+++ b/dist-ccu/src/addon/ccu-historian-sample.config
@@ -16,5 +16,6 @@ devices.historianAddress='127.0.0.1'
 database.dir='/media/usb0/ccu-historian'
 historian.metaCycle=4*60*60*1000
 historian.bufferTime=4*60*60*1000
+base.scriptDir='/usr/local/addons/ccu-historian'
 webServer.menuLinks.link1.text='H2-HighChart'
 webServer.menuLinks.link1.address='/custom/h2-highchart/H2-HighChart.gy'
