--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -39,7 +39,8 @@
 // historian.bufferTime=0 
 // devices.historianBinRpcPort=2099
 // devices.historianXmlRpcPort=2098
-// devices.historianAddress=null // eigene IP-Adresse automatisch ermitteln
+// devices.historianAddress=null // null: eigene IP-Adresse automatisch ermitteln
+// base.scriptDir='.'
 // 
 // Für jede Zentrale bzw. jedes Gerät müssen folgende zwei Optionen gesetzt werden
 // (s.a. Abschnitt 3.2 im Handbuch):
