--- a/ccu-historian/.classpath
+++ b/ccu-historian/.classpath
@@ -19,6 +19,6 @@
 	<classpathentry kind="lib" path="/external-libs/groovy-2.5.6/groovy-cli-commons-2.5.6.jar"/>
 	<classpathentry kind="lib" path="/external-libs/commons-cli-1.4/commons-cli-1.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/external-libs/h2-1.4.200/h2-1.4.200.jar"/>
+	<classpathentry kind="lib" path="/external-libs/h2-1.4.200/h2-1.4.200.jar" sourcepath="/external-libs/h2-1.4.200/h2-1.4.200-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
