updated documentation links

--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -3,7 +3,8 @@
 // Hinweise:
 // Kommentarzeilen starten mit zwei Schrägstrichen (//). Alle Zeichen nach den Schrägstrichen
 // werden ignoriert. Zeichenketten als Optionswert müssen von einfachen Anführungszeichen (')
-// umschlossen sein. Weitere Informationen sind auch im Abschnitt 3 des Handbuchs zu finden.
+// umschlossen sein. Weitere Informationen sind auch im Handbuchs 
+// (https://github.com/mdzio/ccu-historian/wiki#konfiguration) zu finden.
 //
 // Liste der zur Verfügung stehen Konfigurationsoptionen mit ihren jeweiligen Standardwerten:
 //
@@ -31,9 +32,9 @@
 // webServer.dir='./webapp'
 // webServer.logLevel=Level.WARNING
 // webServer.historianAddress=''
-// webServer.trendDesigns ... (s.a. Abschnitt 7.4.1 im Handbuch)
+// webServer.trendDesigns ... (s.a. https://github.com/mdzio/ccu-historian/wiki#anpassung-der-trend-darstellung)
 // webServer.apiKeys=[]
-// webServer.menuLinks ... (s.a. Abschnitt 4.4 im Handbuch)
+// webServer.menuLinks ... (s.a. https://github.com/mdzio/ccu-historian/wiki#eigene-verweise-auf-web-seiten)
 // historian.metaCycle=3600000 // 1 Stunde
 // historian.bufferCount=5000
 // historian.bufferTime=0 
@@ -43,7 +44,7 @@
 // base.scriptDir='.'
 // 
 // Für jede Zentrale bzw. jedes Gerät müssen folgende zwei Optionen gesetzt werden
-// (s.a. Abschnitt 3.2 im Handbuch):
+// (s.a. https://github.com/mdzio/ccu-historian/wiki#konfiguration-der-angeschlossenen-ger%C3%A4te):
 // devices.device<Nr.>.type=<CCU1, CCU2 oder BINRPC> 
 // devices.device<Nr.>.address='<IP-Adresse>'
 //
