new configuration options historian.defaultDisabled, historian.defaultHidden, fixes #167

--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -38,7 +38,8 @@
 // historian.metaCycle=3600000 // 1 Stunde
 // historian.bufferCount=5000
 // historian.bufferTime=0 
-// historian.defaultActive=true
+// historian.defaultDisabled=false
+// historian.defaultHidden=false
 // devices.historianBinRpcPort=2099
 // devices.historianXmlRpcPort=2098
 // devices.historianAddress=null // null: eigene IP-Adresse automatisch ermitteln
