added CORS support, fixes #204

--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -35,6 +35,7 @@
 // webServer.trendDesigns ... (s.a. https://github.com/mdzio/ccu-historian/wiki#anpassung-der-trend-darstellung)
 // webServer.apiKeys=[]
 // webServer.menuLinks ... (s.a. https://github.com/mdzio/ccu-historian/wiki#eigene-verweise-auf-web-seiten)
+// webServer.corsOrigin='*'
 // historian.metaCycle=3600000 // 1 Stunde
 // historian.bufferCount=5000
 // historian.bufferTime=0 
