ccu addon wait for process exit, fixes #252, ccu link fixes #249

--- a/dist-ccu/src/addon/ccu-historian-sample.config
+++ b/dist-ccu/src/addon/ccu-historian-sample.config
@@ -11,7 +11,7 @@ webServer.historianAddress='X.X.X.X'
 webServer.dir='/usr/local/addons/ccu-historian/ccu-historian/webapp'
 webServer.logLevel=Level.INFO
 devices.device1.type=CCU2
-devices.device1.address='127.0.0.1'
+devices.device1.address='X.X.X.X'
 devices.historianAddress='127.0.0.1'
 database.dir='/media/usb0/ccu-historian'
 historian.metaCycle=4*60*60*1000
