optionally show last communication time and last value, fixes #276

--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -36,6 +36,7 @@
 // webServer.apiKeys=[]
 // webServer.menuLinks ... (s.a. https://github.com/mdzio/ccu-historian/wiki#eigene-verweise-auf-web-seiten)
 // webServer.corsOrigin='*'
+// webServer.showLastValue=false
 // historian.metaCycle=3600000 // 1 Stunde
 // historian.bufferCount=5000
 // historian.bufferTime=0 
