--- a/ccu-historian/.classpath
+++ b/ccu-historian/.classpath
@@ -4,13 +4,9 @@
 	<classpathentry kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/hc-utils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/mdz-utils"/>
-	<classpathentry kind="lib" path="/external-libs/jetty-all-7.2.2/jetty-all-7.2.2.v20101205.jar"/>
-	<classpathentry kind="lib" path="/external-libs/javax.servlet.jsp-2.1.0/javax.servlet.jsp_2.1.0.v201004190952.jar"/>
-	<classpathentry kind="lib" path="/external-libs/javax.el-api-1.1.2/javax.el-api-1.1.2.jar"/>
 	<classpathentry kind="lib" path="/external-libs/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="lib" path="/external-libs/jcommon-1.0.23/jcommon-1.0.23.jar"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
-	<classpathentry kind="lib" path="/external-libs/servlet-api-2.4/servlet-api-2.4.jar"/>
 	<classpathentry kind="lib" path="/external-libs/groovy-2.5.6/groovy-json-2.5.6.jar"/>
 	<classpathentry kind="lib" path="/external-libs/groovy-2.5.6/groovy-sql-2.5.6.jar"/>
 	<classpathentry kind="lib" path="/external-libs/groovy-2.5.6/groovy-servlet-2.5.6.jar"/>
@@ -20,5 +16,15 @@
 	<classpathentry kind="lib" path="/external-libs/commons-cli-1.4/commons-cli-1.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/external-libs/h2-1.4.199/h2-1.4.199.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/servlet-api-3.1.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-server-9.4.41.v20210516.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-io-9.4.41.v20210516.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-util-9.4.41.v20210516.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-webapp-9.4.41.v20210516.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-servlet-9.4.41.v20210516.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-security-9.4.41.v20210516.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-http-9.4.41.v20210516.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-xml-9.4.41.v20210516.jar"/>
+	<classpathentry kind="lib" path="/external-libs/jetty-9.4.41/jetty-servlets-9.4.41.v20210516.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
